tests/NormalTests/paczka1/fuzzy1/90712349.err
Error in line 14: A875 A776 27,4
Error in line 20: pbFAbg5HQV S787 69,4
Error in line 1: vGwBos A776 90,1
Error in line 21: pbFAbg5HQV A776 72,7
Error in line 28: vGwBos S660 96,3
Error in line 29: pbFAbg5HQV S787 45,8
Error in line 32: pbFAbg5HQV A875 694,9
Error in line 36: pbFAbg5HQV A875 10,65
Error in line 7: L2MedEFX2d S660 26,5
